fixed z-index issue with grid, add options popover

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,7 @@
 div > .react-grid-item.react-grid-placeholder {
   background: orange;
 }
+
+.react-grid-item:hover{
+  z-index: 10;
+}
